--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,15 @@ services:
   mongodb:
     env_file:
       - .env
-    image: tutum/mongodb:3.2
+    image: mongo:3.2
     container_name: mongodb
   node:
     env_file:
       - .env
-    image: "node:14"
+    build: .
     container_name: node
-    working_dir: /index
-    volumes:
-      - .:/index
     ports:
       - "5000:5000"
-    command: "npm start"
     depends_on:
       - mongodb
     links:
