--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   mongodb:
     env_file:
@@ -9,10 +7,14 @@ services:
   node:
     env_file:
       - .env
-    build: .
+    image: "node:14"
     container_name: node
+    working_dir: /index
+    volumes:
+      - .:/index
     ports:
       - "5000:5000"
+    command: "npm start"
     depends_on:
       - mongodb
     links:
